--- a/StrainVisualizer/MainWindow.xaml
+++ b/StrainVisualizer/MainWindow.xaml
@@ -19,7 +19,8 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="7*"/>
-            <ColumnDefinition Width="25*"/>
+            <ColumnDefinition Width="17*"/>
+            <ColumnDefinition Width="7*"/>
         </Grid.ColumnDefinitions>
         <TreeView x:Name="FolderView"
 	              SelectedItemChanged="SelectedItem" Grid.RowSpan="3">
@@ -43,13 +44,21 @@
 
         </TreeView>
         <Button Click="loadBeatmap_Click" Content="Load Beatmap" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Height="99" Width="263"/>
-        <oxy:PlotView RenderTransformOrigin="0.5,0.5" Model="{Binding StrainModel}" Margin="262,2,0,0" Grid.Row="2" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
-        <Canvas Grid.ColumnSpan="2" Margin="262,0,0,30" Grid.RowSpan="2"/>
-        <CheckBox Content="AimSnap" Margin="262,0,0,0" Height="30" VerticalAlignment="Center" Checked="AimSnap_Checked" Unchecked="AimSnap_Unchecked" Grid.ColumnSpan="2" IsChecked="True" Grid.Row="1"/>
-        <CheckBox Content="AimFlow" Margin="86,0,0,0" Height="30" VerticalAlignment="Center" Grid.Column="1" Checked="AimFlow_Checked" Unchecked="AimFlow_Unchecked" IsChecked="True" Grid.Row="1"/>
-        <CheckBox Content="AimHybrid" Margin="170,0,0,0" Height="30" VerticalAlignment="Center" Grid.Column="1" Checked="AimHybrid_Checked" Unchecked="AimHybrid_Unchecked" IsChecked="True" Grid.Row="1"/>
-        <CheckBox Content="TapSpeed" Margin="256,0,0,0" Height="30" VerticalAlignment="Center" Grid.Column="1" Checked="TapSpeed_Checked" Unchecked="TapSpeed_Unchecked" IsChecked="True" Grid.Row="1"/>
-        <CheckBox Content="TapStamina" Margin="340,0,0,0" Height="30" VerticalAlignment="Center" Grid.Column="1" Checked="TapStamina_Checked" Unchecked="TapStamina_Unchecked" IsChecked="True" Grid.Row="1"/>
-        <CheckBox Content="TapRhythm" Margin="448,0,0,0" Height="30" VerticalAlignment="Center" Grid.Column="1" Checked="TapRhythm_Checked" Unchecked="TapRhythm_Unchecked" IsChecked="True" Grid.Row="1"/>
+        <oxy:PlotView RenderTransformOrigin="0.5,0.5" Model="{Binding StrainModel}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
+        <Canvas Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2"/>
+        <StackPanel x:Name="graphPlotContents" Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
+            <CheckBox Content="AimSnap" Margin="0,0,0,0" Height="30" VerticalAlignment="Center" Checked="PlotContents_Toggled" Unchecked="PlotContents_Toggled" IsChecked="True" />
+            <CheckBox Content="AimFlow" Margin="10,0,0,0" Height="30" VerticalAlignment="Center" Checked="PlotContents_Toggled" Unchecked="PlotContents_Toggled" IsChecked="True" />
+            <CheckBox Content="AimHybrid" Margin="10,0,0,0" Height="30" VerticalAlignment="Center" Checked="PlotContents_Toggled" Unchecked="PlotContents_Toggled" IsChecked="True"/>
+            <CheckBox Content="TapSpeed" Margin="10,0,0,0" Height="30" VerticalAlignment="Center" Checked="PlotContents_Toggled" Unchecked="PlotContents_Toggled" IsChecked="True"/>
+            <CheckBox Content="TapStamina" Margin="10,0,0,0" Height="30" VerticalAlignment="Center" Checked="PlotContents_Toggled" Unchecked="PlotContents_Toggled" IsChecked="True"/>
+            <CheckBox Content="TapRhythm" Margin="10,0,0,0" Height="30" VerticalAlignment="Center" Checked="PlotContents_Toggled" Unchecked="PlotContents_Toggled" IsChecked="True"/>
+        </StackPanel>
+
+        <StackPanel x:Name="strainModifiers" Orientation="Horizontal" Grid.Column="2" Grid.Row="1">
+            <CheckBox Content="HR" Margin="0,0,0,0" Height="30" VerticalAlignment="Center" Checked="Modifier_Toggled" Unchecked="Modifier_Toggled" IsChecked="True" />
+            <CheckBox Content="DT" Margin="0,0,0,0" Height="30" VerticalAlignment="Center" Checked="Modifier_Toggled" Unchecked="Modifier_Toggled" IsChecked="True" />
+            <CheckBox Content="EZ" Margin="0,0,0,0" Height="30" VerticalAlignment="Center" Checked="Modifier_Toggled" Unchecked="Modifier_Toggled" IsChecked="True" />
+        </StackPanel>
     </Grid>
 </Window>
