--- a/StrainVisualizer/MainWindow.xaml
+++ b/StrainVisualizer/MainWindow.xaml
@@ -15,35 +15,21 @@
             <RowDefinition Height="562*"/>
             <RowDefinition Height="32*"/>
             <RowDefinition Height="191*"/>
-            <RowDefinition Height="99*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="7*"/>
-            <ColumnDefinition Width="17*"/>
+            <ColumnDefinition Width="10*"/>
+            <ColumnDefinition Width="15*"/>
             <ColumnDefinition Width="7*"/>
         </Grid.ColumnDefinitions>
-        <TreeView x:Name="FolderView"
-	              SelectedItemChanged="SelectedItem" Grid.RowSpan="3">
-            <TreeView.Resources>
-                <Style TargetType="{x:Type TreeViewItem}">
-                    <Setter Property="HeaderTemplate">
-                        <Setter.Value>
-                            <DataTemplate>
-                                <StackPanel Orientation="Horizontal">
-                                    <Image Width="20"
-								           Margin="3"
-								           Source="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type TreeViewItem}}, Path=Tag, Converter={x:Static local:HeaderToImageConverter.Instance}}" />
-                                    <TextBlock VerticalAlignment="Bottom"
-								               Text="{Binding}" />
-                                </StackPanel>
-                            </DataTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </TreeView.Resources>
+        <StackPanel Grid.RowSpan="3">
+            <StackPanel Grid.Row="0" Orientation="Horizontal">
 
-        </TreeView>
-        <Button Click="loadBeatmap_Click" Content="Load Beatmap" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Height="99" Width="263"/>
+                <Label Content="Search:"></Label>
+                <TextBox x:Name="BeatmapSearchTextBox" Text="" TextWrapping="Wrap" KeyDown="BeatmapSearchUICallback" Width="325"/>
+            </StackPanel>
+            <ListBox x:Name="LoadedBeatmapsVirtualStack" SelectionChanged="LoadBeatmapFromUICallback" VirtualizingStackPanel.IsVirtualizing="True" ScrollViewer.HorizontalScrollBarVisibility="Visible" Width="375" Height="858" />
+
+        </StackPanel>
         <oxy:PlotView RenderTransformOrigin="0.5,0.5" Model="{Binding StrainModel}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
         <Canvas Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2"/>
         <StackPanel x:Name="graphPlotContents" Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
