--- a/PerformanceCalculatorGUI/MainWindow.xaml
+++ b/PerformanceCalculatorGUI/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PerformanceCalculatorGUI"
         mc:Ignorable="d"
-        Title="osu! Standard Performance Calculator" Height="450" Width="800">
+        Title="osu! Standard Performance Calculator" Height="600" Width="1500">
     <Grid>
         <TabControl>
             <TabItem Header="Profile">
@@ -24,8 +24,17 @@
                     <Label Content="Username:"/>
                     <Label Content="API Key:" Grid.Row="1"/>
                     <TextBox x:Name="profileUsernameTextBox" Text="" TextAlignment="Left" Padding="0,8,0,0" Grid.Column="1"/>
-                    <TextBox x:Name="profileApiKeyTextBox" Text="" TextAlignment="Left" Padding="0,8,0,0" Grid.Column="1" Grid.Row="1"/>
+                    <PasswordBox x:Name="profileApiKeyTextBox" Padding="0,8,0,0" Grid.Column="1" Grid.Row="1"/>
                     <Button Click="btnProfileExecuteClick" Content="Get Scores! (Don't spam this or you will get rate-limited)" Grid.Column="2" HorizontalAlignment="Left" Grid.Row="0" Margin="15,0,0,0"/>
+                    <TextBox Text="Get your api key here: https://old.ppy.sh/p/api"  Grid.Column="2" HorizontalAlignment="Left" Grid.Row="1" Margin="15,15,0,0">
+                        <TextBox.Style>
+                            <Style TargetType="TextBox">
+                                <Setter Property="IsReadOnly" Value="True" />
+                                <Setter Property="BorderThickness" Value="0" />
+                                <Setter Property="TextWrapping" Value="Wrap" />
+                            </Style>
+                        </TextBox.Style>
+                    </TextBox>
 
                     <Label Content="Status:" Grid.Row="2"/>
                     <Label x:Name="profileStatusTextBox" Padding="0,8,0,0" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="2"/>
