--- a/StrainVisualizer/MainWindow.xaml
+++ b/StrainVisualizer/MainWindow.xaml
@@ -33,12 +33,8 @@
         <oxy:PlotView RenderTransformOrigin="0.5,0.5" Model="{Binding StrainModel}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
         <Canvas Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2"/>
         <StackPanel x:Name="graphPlotContents" Orientation="Horizontal" Grid.Column="1" Grid.Row="1">
-            <CheckBox Content="AimSnap" Margin="0,0,0,0" Height="30" VerticalAlignment="Center" Checked="PlotContents_Toggled" Unchecked="PlotContents_Toggled" IsChecked="True" />
-            <CheckBox Content="AimFlow" Margin="10,0,0,0" Height="30" VerticalAlignment="Center" Checked="PlotContents_Toggled" Unchecked="PlotContents_Toggled" IsChecked="True" />
-            <CheckBox Content="AimHybrid" Margin="10,0,0,0" Height="30" VerticalAlignment="Center" Checked="PlotContents_Toggled" Unchecked="PlotContents_Toggled" IsChecked="True"/>
-            <CheckBox Content="TapSpeed" Margin="10,0,0,0" Height="30" VerticalAlignment="Center" Checked="PlotContents_Toggled" Unchecked="PlotContents_Toggled" IsChecked="True"/>
-            <CheckBox Content="TapStamina" Margin="10,0,0,0" Height="30" VerticalAlignment="Center" Checked="PlotContents_Toggled" Unchecked="PlotContents_Toggled" IsChecked="True"/>
-            <CheckBox Content="TapRhythm" Margin="10,0,0,0" Height="30" VerticalAlignment="Center" Checked="PlotContents_Toggled" Unchecked="PlotContents_Toggled" IsChecked="True"/>
+            <CheckBox Content="Speed" Margin="0,0,0,0" Height="30" VerticalAlignment="Center" Checked="PlotContents_Toggled" Unchecked="PlotContents_Toggled" IsChecked="True" />
+            <CheckBox Content="Aim" Margin="10,0,0,0" Height="30" VerticalAlignment="Center" Checked="PlotContents_Toggled" Unchecked="PlotContents_Toggled" IsChecked="True" />
         </StackPanel>
 
         <StackPanel x:Name="strainModifiers" Orientation="Horizontal" Grid.Column="2" Grid.Row="1">
